<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:weightSum="1">

    <TextView
        android:id="@+id/textview_arcadescore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_weight="0.3"
        android:background="@drawable/redbackground_blackborder"
        android:gravity="center"
        android:text="@string/arcadescore"
        android:textColor="@color/White" >
    </TextView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal" >
        
        <TextView
        android:id="@+id/textview_arcadescorenormal"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/redbackground_blackborder"
        android:gravity="center"
        android:textColor="@color/White"
		android:text="@string/arcadescorenormal"/>
        
            <TextView
        android:id="@+id/textview_arcadescorehard"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/redbackground_blackborder"
        android:gravity="center"
        android:textColor="@color/White" 
        android:text="@string/arcadescorehard"/>
        
                <TextView
        android:id="@+id/textview_arcadescoreextreme"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/redbackground_blackborder"
        android:gravity="center"
        android:textColor="@color/White"
        android:text="@string/arcadescoreextreme" />
        
    </LinearLayout>

  

</LinearLayout>